Build a GraphQL Server

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Phu Phan <phu.phan@vinasource.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.15.2",
+    "express-graphql": "^0.6.4",
     "graphql": "^0.9.3"
   }
 }
